# upperComputer

./: .gitignore  CMakeLists.txt  README.md
scripts/: app.py  modbus_simulator.py
sql/: alarm.sql  device.sql  history.sql
src/: CMakeLists.txt  main.cpp  main.cpp#
src/comm/: HeartBeat.cpp  HeartBeat.h  HttpClient.cpp  HttpClient.h  ModbusTcpMaster.cpp  ModbusTcpMaster.h  TcpServer.cpp  TcpServer.h
src/common/: Config.cpp  Config.h  Defines.cpp  Defines.h  Logger.cpp  Logger.h  Utils.cpp  Utils.h
src/db/: MysqlManager.cpp  MysqlManager.h  SqliteManager.cpp  SqliteManager.h
src/logic/: AlarmManager.cpp  AlarmManager.h  CollectManager.cpp  CollectManager.h  DeviceManager.cpp  DeviceManager.h
src/ui/: AlarmDialog.cpp  AlarmDialog.h  AlarmDialog.ui  ChartWidget.cpp  ChartWidget.h  ConfigDialog.cpp  ConfigDialog.h  ConfigDialog.ui  DataQueryDialog.cpp  DataQueryDialog.h  DataQueryDialog.ui  DeviceEditDialog.cpp  DeviceEditDialog.h  DevicePanelWidget.cpp  DevicePanelWidget.h  LoginDialog.h  LoginDialog.ui  Logindialog.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  SimpleHttpTest.cpp  SimpleHttpTest.h
